# DynamicOctTrees

./: CMakeLists.txt  main.c
src/game/: Game.c  Game.h
src/game/engine/mathematics/matrices/: Matrics.c  Matrics.h
src/game/engine/mathematics/operations/: Sqrt.c
src/game/engine/mathematics/vectors/: Vectors.c  Vectors.h
src/game/gameProperties/: GameProperties.c  GameProperties.h
src/game/player/: Player.c  Player.h
src/graphics/buffer/: Buffer.c  Buffer.h
src/graphics/screen/Window/: Window.c  Window.h
src/graphics/shaders/: Shader.c  fragment001.fs  vertex001.vs
src/logging/: ErrorLogging.c  ErrorLogging.h
src/octTrees/dynamicOctTree/branch/: Branch.c  Branch.h
src/octTrees/dynamicOctTree/leaf/: Leaf.c  Leaf.h  Node.h
src/octTrees/dynamicOctTree/leaf/voxel/: Voxel.c  Voxel.h
src/octTrees/dynamicOctTree/octtree/: OctTree.c  OctTree.h
src/octTrees/dynamicOctTree/octtree/files/: objFile.c  objFile.h
test/: MathTest.c  MathTest.h
